# TournamentAssistant

./: .dockerignore  .gitignore  .gitmodules  BattleSaber.sln  LICENSE  PlaylistHandler.cs  README.md  TournamentAssistant.sln  build-all-versions.ps1  package-lock.json  vagueNotes.txt
BattleSaber/: BattleSaber.csproj  Plugin.cs  PluginClient.cs  SongDownloader.cs  manifest.json
BattleSaberCore/: BattleSaberCore.csproj  BattleSaberHost.cs  Program.cs
BattleSaberUI/: App.config  BattleSaberUI.csproj  CommandImplementation.cs  packages.config
EUCModule/: EUC.cs  EUCModule.csproj  ILRepack.targets  app.config  packages.config
MockClientConsole/: MockClient.cs  MockClientConsole.csproj  Program.cs  Utilities.cs
Notes/: StreamSyncNotes.txt  StreamSyncNotes_rewrite.txt
Protobuf/: beatmap.proto  beatmap_difficulty.proto  channel.proto  characteristic.proto  connect.proto  connect_response.proto  coordinator.proto  core_server.proto  discord_user.proto  file.proto  gameplay_modifiers.proto  gameplay_parameters.proto  loaded_song.proto  match.proto  play_song.proto  player.proto  player_specific_settings.proto  preview_beatmap_level.proto  qualifier_event.proto  response.proto  score.proto  score_request.proto  send_bot_message.proto  server_settings.proto  song_finished.proto  song_list.proto  state.proto  team.proto  user.proto
Scripts/: build_proto_for_extension.ps1  build_proto_for_js.ps1
Shared/: AutoUpdater.cs  BattleSaberClient.cs  BattleSaberServer.cs  BeatSaverDownloader.cs  Config.cs  CustomSerializationBinder.cs  HostScraper.cs  IConnection.cs  Logger.cs  OstHelper.cs  Packet.cs  SharedConstructs.cs  SimpleJson.cs  SystemClient.cs  SystemServer.cs  TemporaryClient.cs  TournamentAssistantClient.cs  TournamentAssistantServer.cs  Update.cs
TAClientTest/: Program.cs  TAClientTest.csproj
TAUpdater/: Program.cs  TAUpdater.csproj
TournamentAssistant/: Client.cs  Directory.Build.props  Directory.Build.targets  ILRepack.targets  ILRepacks.targets  Plugin.cs  PluginClient.cs  PluginLogger.cs  Utilities.cs  (+5 more)
TournamentAssistant.Shared/: CompressionUtils.cs  Config.cs  Helpers.cs  HostScraper.cs  IConnection.cs  Logger.cs  OstHelper.cs  Packet.cs  SharedConstructs.cs  SystemClient.cs  SystemServer.cs  TemporaryClient.cs  TournamentAssistant.Shared.csproj  build-proto.ps1
TournamentAssistantStandalone/: .gitignore  CMakeLists.txt  mod.template.json  qpm.json  qpm.shared.json
TournamentAssistantStandalone/cmake/: git.cmake  gtest.cmake  qpm.cmake  strip.cmake  utils.cmake  vcpkg.cmake
TournamentAssistantStandalone/cmake/targets/: android-ndk.cmake  quest.cmake
TournamentAssistantStandalone/include/: _config.hpp  main.hpp
TournamentAssistantStandalone/include/TA/: AntiPause.hpp  Client.hpp  Constants.hpp  MidPlayModifiers.hpp  Models.hpp  Protobuf.hpp  RealtimeScore.hpp  Song.hpp  StreamSync.hpp  TournamentViewController.hpp
TournamentAssistantStandalone/include/TA/UI/: RoomViewController.hpp  TournamentListViewController.hpp  TournamentModeViewController.hpp
TournamentAssistantStandalone/scripts/: build.ps1  copy.ps1  createqmod.ps1  ndk-stack.ps1  pull-tombstone.ps1  start-logging.ps1  validate-modjson.ps1
TournamentAssistantStandalone/src/: main.cpp
TournamentAssistantStandalone/src/TA/: AntiPause.cpp  Client.cpp  MidPlayModifiers.cpp  Protobuf.cpp  RealtimeScore.cpp  Song.cpp  StreamSync.cpp
TournamentAssistantStandalone/src/UI/: TournamentViewController.cpp
TournamentAssistantStandalone/src/UI/Controllers/: RoomViewController.cpp  TournamentListViewController.cpp  TournamentModeViewController.cpp
TournamentAssistantUI/src-tauri/: Cargo.toml  tauri.conf.json
TournamentAssistantUI/src-tauri/icons/: icon.icns
TournamentAssistantUI/src-tauri/src/: main.rs
TournamentAssistantUI/src-tauri/src/screen/: draw.rs  mod.rs  read.rs
(+1007 files in other folders)
